Add Mobx (#12)
