# server/components/gitCommands/gitCommandsService.ts
@@ -3,12 +3,13 @@ import { promisify } from 'util';
 import { exec, ExecOptions } from 'child_process';
 import os from 'os';
 import fs from 'fs';
-import { AppError } from '@server/components/error/error';
-import { IBuildCommit } from '@server/components/builds/interfaces';
 
-require('dotenv').config();
+import { AppError } from '@shared/error/error';
+import { HttpCode } from '@shared/error/httpStatusCodes';
+import { IJobCommit } from '@server/components/jobs/interfaces';
+import { envConfig } from '@shared/config';
 
-const localRepo = process.env.LOCAL_REPO || '';
+const localRepo = envConfig.LOCAL_REPO || '';
 const execAsync = promisify(exec);
 const homeDir = os.homedir();
 const localRepoPath = path.join(homeDir, localRepo);
@@ -21,7 +22,7 @@ export const gitCommandsService = {
         return execAsync(command, options);
     },
 
-    cloneRepo: (username: string, repoName: string): void => {
+    cloneRepo: (repoName: string): void => {
         try {
             const isLocalRepo = gitCommandsService.findLocalRepo();
 
@@ -29,10 +30,10 @@ export const gitCommandsService = {
                 gitCommandsService.deleteLocalRepo();
             }
 
-            const command = `git clone https://github.com/${username}/${repoName} ${localRepoPath}`;
+            const command = `git clone https://github.com/${repoName} ${localRepoPath}`;
             gitCommandsService.executeCommand(command);
         } catch (err) {
-            throw new AppError(err.name, err.httpCode, err.description);
+            throw new AppError('Cannot clone repo', HttpCode.FORBIDDEN);
         }
     },
 
@@ -41,7 +42,7 @@ export const gitCommandsService = {
             const file = fs.statSync(path.join(homeDir, localRepo));
             return file.isDirectory();
         } catch (err) {
-            throw new AppError(err.name, err.httpCode, err.description);
+            throw new AppError('Cannot find local repo', HttpCode.NOT_FOUND);
         }
     },
 
@@ -50,7 +51,7 @@ export const gitCommandsService = {
             const command = `rm -rf ${localRepoPath}`;
             gitCommandsService.executeCommand(command);
         } catch (err) {
-            throw new AppError(err.name, err.httpCode, err.description);
+            throw new AppError('Cannot delete local repo', HttpCode.FORBIDDEN);
         }
     },
 
@@ -59,12 +60,12 @@ export const gitCommandsService = {
             const command = `cd ${localRepoPath} && git checkout ${branchName}`;
             gitCommandsService.executeCommand(command);
         } catch (err) {
-            throw new AppError(err.name, err.httpCode, err.description);
+            throw new AppError('Cannot checkout branch', HttpCode.FORBIDDEN);
         }
     },
 
-    getCommitByHash: async (commitHash = '', branchName = 'master'): Promise<IBuildCommit> => {
-        await gitCommandsService.checkout(branchName);
+    getCommitByHash: async (commitHash = '', branchName = 'master'): Promise<IJobCommit> => {
+        //await gitCommandsService.checkout(branchName);
 
         const { stdout } = await gitCommandsService.executeCommand(
             `git log -1 --format="%an|%B" ${commitHash}`,
